Fix front section mobile

--- a/src/app/components/buttons/social-button/social-button-bar/social-button-bar.component.scss
+++ b/src/app/components/buttons/social-button/social-button-bar/social-button-bar.component.scss
@@ -28,5 +28,6 @@
 
     &__email {
         @include subtitles;
+        white-space: nowrap;
     }
 }
